<resources>
    <string name="app_name">Firebase</string>
    <string name="auth_student_btn_txt">Log in as student</string>
    <string name="auth_admin_btn_text">Log in as admin</string>
    <string name="login_email_hint">Enter email</string>
    <string name="login_password_hint">Enter Password</string>
    <string name="login_btn_txt">Login</string>
    <string name="register_username_hint">Enter username</string>
    <string name="register_btn_txt">Register</string>
    <string name="register_prompt_txt">Dont have an account ?\nSwipe right to register</string>
    <string name="login_prompt_txt">Already have an account ?\nSwipe left to login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>