<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/loginback"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/registration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="Register"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="30sp" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_above="@id/layout"
        android:layout_centerInParent="true"
        android:src="@drawable/admin" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="-20dp"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="18dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:id="@+id/username_layout"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_baseline_verified_user_24" />

            <EditText
                android:id="@+id/registration_username"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint="@string/register_username_hint"
                />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/email_layout"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_baseline_email_24" />

    <EditText
        android:id='@+id/registration_email'
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/login_email_hint"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/email_layout"
        android:id="@+id/password_layout"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/lock" />


    <EditText
        android:id='@+id/registration_password'
        android:layout_width="230dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        />
        <ImageButton
            android:id="@+id/register_show_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="18dp"
            android:baselineAlignBottom="true"
            android:background="@android:color/transparent"
            android:src="@drawable/hidden_icon" />
    </LinearLayout>


    <Button
        android:id="@+id/registration_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/register_btn_txt"
        />

    <TextView
        android:id="@+id/login_prompt"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/login_prompt_txt"
        />
    </LinearLayout>


</RelativeLayout>