<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginback"
    android:padding="16dp"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="Account Login"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="30sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_above="@id/layout"
        android:layout_centerInParent="true"
        android:src="@drawable/admin" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="-20dp"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Email "
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_baseline_email_24" />

            <EditText
                android:id='@+id/login_email'
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_hint" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Enter Password "
            android:textSize="22sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/email_layout"
        android:id="@+id/password_layout"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/lock" />

        <EditText
        android:id='@+id/login_password'
        android:layout_width="200dp"
            android:layout_marginLeft="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword" />
        <ImageButton
            android:id="@+id/login_show_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="28dp"
            android:baselineAlignBottom="true"
            android:background="@android:color/transparent"
            android:src="@drawable/hidden_icon" />

    </LinearLayout>



    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_margin="16dp"
        android:textColor="#000"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:text="@string/login_btn_txt" />

    <TextView
        android:id="@+id/register_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/register_prompt_txt"
        android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>